Return clone of byte array to avoid Use static valueOf() methods instead of new ... for better performance & lower memory usage.